Update order accepting process [backend][frontend][api][db]
