# backend/monolith/internal/domains/order/interface/http/pricecalculation/price_calculation.gen.go
@@ -1,0 +1,185 @@
+// Package pricecalculation provides primitives to interact with the openapi HTTP API.
+//
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.1 DO NOT EDIT.
+package pricecalculation
+
+import (
+	"context"
+	"encoding/json"
+	"fmt"
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+	strictgin "github.com/oapi-codegen/runtime/strictmiddleware/gin"
+)
+
+const (
+	CookieAuthScopes = "CookieAuth.Scopes"
+)
+
+// ErrorResponse defines model for ErrorResponse.
+type ErrorResponse struct {
+	Error *string `json:"error,omitempty"`
+}
+
+// EstimateRequest defines model for EstimateRequest.
+type EstimateRequest struct {
+	CarWeightKg          int `json:"car_weight_kg"`
+	DistanceMeters       int `json:"distance_meters"`
+	HowManyWheelsBlocked int `json:"how_many_wheels_blocked"`
+}
+
+// EstimateResponse defines model for EstimateResponse.
+type EstimateResponse struct {
+	PriceRubles *int `json:"price_rubles,omitempty"`
+}
+
+// EstimateOrderPriceJSONRequestBody defines body for EstimateOrderPrice for application/json ContentType.
+type EstimateOrderPriceJSONRequestBody = EstimateRequest
+
+// ServerInterface represents all server handlers.
+type ServerInterface interface {
+	// Estimate order price
+	// (POST /order/estimate)
+	EstimateOrderPrice(c *gin.Context)
+}
+
+// ServerInterfaceWrapper converts contexts to parameters.
+type ServerInterfaceWrapper struct {
+	Handler            ServerInterface
+	HandlerMiddlewares []MiddlewareFunc
+	ErrorHandler       func(*gin.Context, error, int)
+}
+
+type MiddlewareFunc func(c *gin.Context)
+
+// EstimateOrderPrice operation middleware
+func (siw *ServerInterfaceWrapper) EstimateOrderPrice(c *gin.Context) {
+
+	c.Set(CookieAuthScopes, []string{})
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		middleware(c)
+		if c.IsAborted() {
+			return
+		}
+	}
+
+	siw.Handler.EstimateOrderPrice(c)
+}
+
+// GinServerOptions provides options for the Gin server.
+type GinServerOptions struct {
+	BaseURL      string
+	Middlewares  []MiddlewareFunc
+	ErrorHandler func(*gin.Context, error, int)
+}
+
+// RegisterHandlers creates http.Handler with routing matching OpenAPI spec.
+func RegisterHandlers(router gin.IRouter, si ServerInterface) {
+	RegisterHandlersWithOptions(router, si, GinServerOptions{})
+}
+
+// RegisterHandlersWithOptions creates http.Handler with additional options
+func RegisterHandlersWithOptions(router gin.IRouter, si ServerInterface, options GinServerOptions) {
+	errorHandler := options.ErrorHandler
+	if errorHandler == nil {
+		errorHandler = func(c *gin.Context, err error, statusCode int) {
+			c.JSON(statusCode, gin.H{"msg": err.Error()})
+		}
+	}
+
+	wrapper := ServerInterfaceWrapper{
+		Handler:            si,
+		HandlerMiddlewares: options.Middlewares,
+		ErrorHandler:       errorHandler,
+	}
+
+	router.POST(options.BaseURL+"/order/estimate", wrapper.EstimateOrderPrice)
+}
+
+type EstimateOrderPriceRequestObject struct {
+	Body *EstimateOrderPriceJSONRequestBody
+}
+
+type EstimateOrderPriceResponseObject interface {
+	VisitEstimateOrderPriceResponse(w http.ResponseWriter) error
+}
+
+type EstimateOrderPrice200JSONResponse EstimateResponse
+
+func (response EstimateOrderPrice200JSONResponse) VisitEstimateOrderPriceResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(200)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type EstimateOrderPrice400JSONResponse ErrorResponse
+
+func (response EstimateOrderPrice400JSONResponse) VisitEstimateOrderPriceResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(400)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type EstimateOrderPrice401Response struct {
+}
+
+func (response EstimateOrderPrice401Response) VisitEstimateOrderPriceResponse(w http.ResponseWriter) error {
+	w.WriteHeader(401)
+	return nil
+}
+
+// StrictServerInterface represents all server handlers.
+type StrictServerInterface interface {
+	// Estimate order price
+	// (POST /order/estimate)
+	EstimateOrderPrice(ctx context.Context, request EstimateOrderPriceRequestObject) (EstimateOrderPriceResponseObject, error)
+}
+
+type StrictHandlerFunc = strictgin.StrictGinHandlerFunc
+type StrictMiddlewareFunc = strictgin.StrictGinMiddlewareFunc
+
+func NewStrictHandler(ssi StrictServerInterface, middlewares []StrictMiddlewareFunc) ServerInterface {
+	return &strictHandler{ssi: ssi, middlewares: middlewares}
+}
+
+type strictHandler struct {
+	ssi         StrictServerInterface
+	middlewares []StrictMiddlewareFunc
+}
+
+// EstimateOrderPrice operation middleware
+func (sh *strictHandler) EstimateOrderPrice(ctx *gin.Context) {
+	var request EstimateOrderPriceRequestObject
+
+	var body EstimateOrderPriceJSONRequestBody
+	if err := ctx.ShouldBindJSON(&body); err != nil {
+		ctx.Status(http.StatusBadRequest)
+		ctx.Error(err)
+		return
+	}
+	request.Body = &body
+
+	handler := func(ctx *gin.Context, request interface{}) (interface{}, error) {
+		return sh.ssi.EstimateOrderPrice(ctx, request.(EstimateOrderPriceRequestObject))
+	}
+	for _, middleware := range sh.middlewares {
+		handler = middleware(handler, "EstimateOrderPrice")
+	}
+
+	response, err := handler(ctx, request)
+
+	if err != nil {
+		ctx.Error(err)
+		ctx.Status(http.StatusInternalServerError)
+	} else if validResponse, ok := response.(EstimateOrderPriceResponseObject); ok {
+		if err := validResponse.VisitEstimateOrderPriceResponse(ctx.Writer); err != nil {
+			ctx.Error(err)
+		}
+	} else if response != nil {
+		ctx.Error(fmt.Errorf("unexpected response type: %T", response))
+	}
+}
